--- a/01-01-getting-started-with-tensorflow.ipynb
+++ b/01-01-getting-started-with-tensorflow.ipynb
@@ -647,7 +647,7 @@
    "source": [
     "Notice that the loss is a very small number (very close to zero). If you run this program, your loss may not be the exact same because the model is initialized with pseudorandom values.\n",
     "\n",
-    "This more complicated program can still be visualized in TensorBoard TensorBoard final model visualization\n",
+    "This more complicated program can still be visualized in TensorBoard\n",
     "<img alt=\"TensorBoard final model visualization\" src=\"https://www.tensorflow.org/images/getting_started_final.png\">"
    ]
   },
@@ -802,7 +802,7 @@
    "source": [
     "`tf.estimator` does not lock you into its predefined models. Suppose we wanted to create a custom model that is not built into TensorFlow. We can still retain the high level abstraction of data set, feeding, training, etc. of `tf.estimator`. For illustration, we will show how to implement our own equivalent model to `LinearRegressor` using our knowledge of the lower level TensorFlow API.\n",
     "\n",
-    "To define a custom model that works with `tf.estimator`, we need to use `tf.estimator.Estimator`. `tf.estimator.LinearRegressor` is actually a sub-class of `tf.estimator.Estimator`. Instead of sub-classing `Estimator`, we simply provide Estimator a function `model_fn` that tells `tf.estimator` how it can evaluate predictions, training steps, and loss. The code is as follows:"
+    "To define a custom model that works with `tf.estimator`, we need to use `tf.estimator.Estimator`. `tf.estimator.LinearRegressor` is actually a sub-class of `tf.estimator.Estimator`. Instead of sub-classing `Estimator`, we simply provide `Estimator` a function `model_fn` that tells `tf.estimator` how it can evaluate predictions, training steps, and loss. The code is as follows:"
    ]
   },
   {
