getting started... Korean transration...

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -12,11 +12,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이 안내서는 텐서플로우에서 프로그래밍을 시작하도록 안내합니다. 이 안내서를 사용하기 전에, [텐서플로우를 설치하십시오](https://www.tensorflow.org/install/). 이 가이드를 최대한 활용하려면, 다음 사항들을 알아야 합니다:\n",
+    "이 안내서는 텐서플로우에서 프로그래밍을 시작하도록 안내합니다. 이 안내서를 사용하기 전에, [텐서플로우를 설치하십시오](https://www.tensorflow.org/install/). 이 안내서를 최대한 활용하려면, 다음 사항들을 알아야 합니다:\n",
     "\n",
     "* 파이썬(Python)으로 프로그래밍하는 법.\n",
     "* 적어도 배열에 대한 약간의 지식.\n",
-    "* 이상적으로는, 기계 학습에 관한 것입니다. 그러나, 기계 학습에 대해 거의 또는 전혀 알지 못하는 경우에도, 이것이 그래도 읽어야 할 첫 번째 가이드입니다.\n",
+    "* 이상적으로는, 기계 학습에 관한 것입니다. 그러나, 기계 학습에 대해 거의 또는 전혀 알지 못하는 경우에도, 이것이 그래도 읽어야 할 첫 번째 안내서입니다.\n",
     "\n",
     "텐서플로우는 여러 API들을 제공합니다. 최저 수준의 API--텐서플로우 Core--는 완벽한 프로그래밍 제어를 제공합니다. 텐서플로우 Core는 기계 학습 연구자 및 모델을 정밀하게 제어해야 하는 사람들을 위해 권장됩니다. 높은 수준의 API는 텐서플로우 Core 위에 구축됩니다. 이러한 상위 수준의 API는 일반적으로 텐서플로우 Core보다 배우고 사용하기가 쉽습니다. 또한 상위 수준의 API는 반복적인 작업을 여러 사용자간에 보다 쉽고 일관되게 만듭니다. tf.estimator와 같은 고급 API를 통해 데이터 셋, 추정자(estimator), 학습 및 추론을 처리할 수 있습니다.\n",
     "\n",
