getting started... Korean transration...

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -928,19 +928,10 @@
    "source": [
     "이제 텐서플로우의 기본에 대한 실무 지식을 습득했습니다. 우리는 더 많이 배울 수있는 몇 가지 자습서들을 가지고 있습니다. 기계 학습의 초보자인 경우는 [MNIST for beginners](https://www.tensorflow.org/get_started/mnist/beginners)를 보시고, 그렇지 않으면 [Deep MNIST for experts](https://www.tensorflow.org/get_started/mnist/pros)를 보세요.\n",
     "<hr/>\n",
-    "별도로 명시된 경우를 제외하고, 이 페이지의 내용은 Creative Commons Attribution 3.0 License로 라이센스가 부여되며, 코드 샘플은 Apache 2.0 License에 의거한 라이센스가 부여됩니다. 자세한 내용은 우리의 사이트 정책을 참조하십시오. Java는 Oracle 및/또는 그 계열사의 등록 상표입니다.\n",
+    "별도로 명시된 경우를 제외하고, 이 페이지의 내용은 Creative Commons Attribution 3.0 License에 의거한 라이센스가 부여되며, 코드 샘플은 Apache 2.0 License에 의거한 라이센스가 부여됩니다. 자세한 내용은 우리의 사이트 정책을 참조하십시오. Java는 Oracle 및/또는 그 계열사의 등록 상표입니다.\n",
     "\n",
     "2017.8월 17, 최종 수정됨 "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
